# auction-theory

./: AGENT.md  Cargo.toml  README.md
src/: allocation.rs  auction.rs  bid.rs  lib.rs  mechanism.rs  payment.rs  revenue.rs  tests.rs
